refactor(ai-module): 完成AI模块代码重构与依赖调整
1. 为AIChatMessage实体添加MyBatisPlus表名注解
2. 修复Result.success调用参数不匹配问题
3. 重构WebSocket相关类名与引用路径
4. 优化AIServiceImpl中的集合操作写法
5. 调整AIPluginController的导入与接口结构
6. 更新AIUtil注释示例内容